# Railio

./: .gitignore  CLAUDE.md  MVP.md  MVP_v0.md  README.md  STRATEGY.md  index.html  package-lock.json  posthog-setup-report.md  update_MVP.md
backend/: .env.example  .gitignore  MVP_v0_BACKEND.md  README.md  RUN.md  middleware.ts  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
backend/api/: index.py
backend/app/: layout.tsx  page.tsx
backend/corpus-sources/: sources.json
backend/drizzle/: 0000_brainy_carlie_cooper.sql  0001_add_ticket_severity.sql
backend/drizzle/meta/: 0000_snapshot.json  _journal.json
backend/lib/: chat-loop.ts  cors.ts  embeddings.ts  hash.ts  messages-repo.ts  openai.ts  pre-arrival.ts  storage.ts  system-prompt.ts  tickets-repo.ts
backend/lib/db/: index.ts  schema.ts
backend/lib/forms/: field-path.ts  pre-fill.ts
backend/lib/tools/: index.ts  lookup-parts.ts  parse-fault-dump.ts  record-part-used.ts  search-corpus.ts  set-ticket-status.ts  update-form-field.ts
backend/org-data/: README.md
backend/org-data/anacostia/: org.json
backend/org-data/demo-rail/: org.json
backend/org-data/omnitrax/: assets.json  build_parts_from_ledger.py  history.json  org.json  parts.json
backend/org-data/progress-rail/: assets.json  history.json  org.json  parts.json
backend/org-data/test/: assets.json  org.json
backend/org-data/westline/: assets.json  org.json  parts.json
backend/railio/: assets_repo.py  auth.py  chat_loop.py  config.py  contract.py  copilot_repo.py  corpus_figures.py  corpus_links.py  corpus_repo.py  db.py  embeddings.py  field_path.py  hash.py  historical_repo.py  main.py  messages_repo.py  model_family.py  openai_client.py  org_context.py  organizations_repo.py  parts_repo.py  pdf_templates.py  post_repair.py  posthog_client.py  pre_arrival.py  pre_fill.py  rate_limit_repo.py  storage.py  suggested_replies.py  system_prompt.py  tickets_repo.py
backend/railio/routers/: assets.py  copilot.py  corpus.py  forms.py  messages.py  parse_fault_dump.py  parts.py  photos.py  tickets.py  uploads.py  users.py
backend/railio/tools/: __init__.py  lookup_parts.py  parse_fault_dump.py  record_part_used.py  search_corpus.py  set_ticket_status.py  show_figure.py  update_form_field.py
backend/railio_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/scripts/: copy_org.py  corpus-build.ts  corpus-fetch.ts  corpus_build.py  corpus_fetch.py  e2e.py  e2e.ts  export_supabase.py  load_history.py  load_org.py  migrate.py  migrate.ts  seed.py  seed.ts  seed_progress_demo.py  verify-chain.ts  verify_chain.py
backend/seeds/: assets.json  corpus-tribal.json  demo-tickets.json  inspection-history.json  parts.json  repair-history.json  tribal-notes.json
backend/seeds/_snapshot/: assets.json  corpus_chunks.json  parts.json
backend/tests/: README.md  conftest.py  test_corpus_retrieval.py  test_model_family.py  test_redact_for_model.py
backend/tests/api/: conftest.py  test_hash_chain.py  test_org_scoping.py  test_parts_locations.py  (+3 more)
railio-ingest/: .env.example  .gitignore  INGESTING_MANUALS.md  README.md  pyproject.toml
railio-ingest/railio_ingest/: __init__.py  backfill_pdf_pages.py  config.py  crop.py  db.py  embeddings.py  extract.py  layout.py  pipeline.py  retry.py  storage.py  vision.py
(+128 files in other folders)
