[project]
name = "railio-backend"
version = "0.1.0"
description = "Railio backend — AI co-pilot for rail maintenance"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "pgvector>=0.3.6",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "openai>=1.58.0",
  "httpx>=0.28.0",
  "supabase>=2.10.0",
  "pyjwt[crypto]>=2.9.0",
  "python-multipart>=0.0.20",
  "posthog>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["railio*"]

[tool.ruff]
line-length = 100
target-version = "py311"
