[project]
name = "railio-backend"
version = "0.1.0"
description = "Railio backend — AI co-pilot for rail maintenance"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "asyncpg>=0.30.0",
  "pgvector>=0.3.6",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.7.0",
  "python-dotenv>=1.0.1",
  "openai>=1.58.0",
  "httpx>=0.28.0",
  "supabase>=2.10.0",
  "pyjwt[crypto]>=2.9.0",
  "python-multipart>=0.0.20",
  "posthog>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8.0",
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
  "pytest-xdist>=3.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["railio*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# BOTH must be session-scoped. railio.db._engine is a module singleton holding
# loop-bound asyncpg connections, so a per-test event loop leaves the cached
# engine pointing at a closed loop and every test after the first dies with
# "Event loop is closed". Setting only the fixture scope is not enough.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-ra --strict-markers"
markers = [
  "live_openai: hits the real OpenAI API (costs money)",
  "db: requires live Postgres with the `unit_tests` org seeded",
]

[tool.ruff]
line-length = 100
target-version = "py311"
