[project]
name = "railio-ingest"
version = "0.1.0"
description = "Isolated admin tool: extract OEM manual PDFs into model-scoped corpus chunks + figure crops, written directly to the prod Supabase. NEVER deployed."
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.24",
    "pillow>=10.0",
    "openai>=1.40",
    "sqlalchemy>=2.0",
    "asyncpg>=0.29",
    "supabase>=2.4",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Surya gives the best figure-box + reading-order + OCR accuracy, but pulls in
# torch (~2GB). Install with `pip install -e ".[layout]"` for the full pipeline.
# Without it, the tool falls back to a vision-model-only layout pass (gpt-4o
# returns figure boxes + text), which is lighter but slightly less precise.
layout = [
    "surya-ocr>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["railio_ingest"]
